2006-05-29  Chris Toshok  <toshok@hungry.com>

	* Makefile.am (release): fix this target so that it works again.

	* NEWS: include news for the first time.

	* configure.ac: bump to 0.0000008.

	* HACKING: fix up the .smk entry, with various options for
	projects, and remove the managed stormlib project since Foole's is
	working.

	* RELEASE_README: s/starcraft/scsharp

	* src/scsharp.exe.config-example: add the new options.

	* src/scsharp.exe.config: can't put -- in the middle of comments.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* SCSharp/Makefile.am (MCSFLAGS): define USE_STORM_DLL if
	ENABLE_STORMLIB == true.

	* src/scsharp.exe.config: add some comments about the debugging
	options, and add a new one to enable the unmanaged mpq library.

	* Tests/dump-iscript.cs (DumpIScript.ctor): we assume the mpq
	passed in is the stardat.mpq.

	* SCSharp/SCSharp.UI/Painter.cs (.ctor): add back in a constructor
	taking a Surface so the font-foo test continues to work.

	* SCSharp/SCSharp.Mpq/Mpq.cs: USE_STORM_DLL no longer switches
	between managed/unmanaged implementations, but compiles in the
	optional unmanaged version as well.

	* Makefile.am (SUBDIRS): only build in StormLib if ENABLE_STORMLIB
	== true.

	* configure.ac: add AC_ARG_ENABLE for --enable-stormlib.  If it's
	left out, only the managed version is built.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs (CreateWindow): switch to new Painter
	ctor.
	(KeyboardDown): add handling for Ctrl-F to switch between
	fullscreen and windowed mode.

	* SCSharp/SCSharp.UI/UIDialog.cs: s/Game/Painter for the screen
	nres constants.

	* SCSharp/SCSharp.UI/Sprite.cs: same.
	
	* SCSharp/SCSharp.UI/Cinematic.cs: same.
	
	* SCSharp/SCSharp.UI/GameScreen: same.

	* SCSharp/SCSharp.UI/UIScreen.cs (FirstPaint): revert to this
	the non-disgusting hack version.

	* SCSharp/SCSharp.UI/Painter.cs: move the SCREEN_RES_X/Y constants
	here, from Game.cs.